# flask-fake-os

./: .gitignore  README.md  main.py  pyproject.toml
admin/: admin.py
auth/: auth.py
auth/templates/auth/: auth.html
auth/templates_auth/auth/: registration.html
desktop/: desktop.py
desktop/templates_desktop/: chat.html  main.html  terminal.htm  win.html
forms/: auth.py  chat.py  terminal.py
models/: chat.py  user.py
static/css/: chat.css  desktop.css  profile.css  registration.css
