[project]
name = "flask-fake-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-admin[all]>=2.2.0",
    "flask-babel>=4.0.0",
    "flask-bcrypt>=1.0.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
]
